Fixed mobile overflow

--- a/css/clock.css
+++ b/css/clock.css
@@ -3,7 +3,7 @@
 section h1, section p {
     height: auto;
     width: 100%;
-    font-size: 3rem;
+    font-size: 2.9rem;
     box-sizing: border-box;
     margin: 1rem;
     padding: 1rem;
@@ -15,7 +15,7 @@ section {
     height: fit-content;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-    gap: 20px;
+    gap: 1rem;
 }
 
 @media (max-width: 600px) {
@@ -23,9 +23,10 @@ section {
       grid-template-columns: 1fr;
       padding: 1rem;
       margin: 1rem;
+      gap: 0.5rem;
   }
 
-  h1, p {
+  section h1, section p {
       padding: 0.5rem;
       margin: 0.5rem;
       font-size: 1rem;
