--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,7 @@
 
 h2 {
     margin: 1rem;
-    font-size: clamp(1rem, 6vw, 2.5rem);
+    font-size: clamp(1rem, 5vw, 2.5rem);
     p {
         font-size: inherit;
         display: inline-block;
