--- a/css/maintheme.css
+++ b/css/maintheme.css
@@ -62,6 +62,16 @@ h1,section {
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
+@media (max-width: 600px) {
+    .abutton-container {
+        grid-template-columns: 1fr;
+    }
+
+    h1, section {
+        font-size: 2rem;
+    }
+}
+
 .abutton {
     cursor: pointer;
     text-decoration: none;
